# math-research-pipelines

./: .gitignore  .zenodo.json  CITATION.cff  OPEN_PROBLEMS.md  README.md  fold_l_series.py  fold_w_series.py  fold_y_series.py  n2-n3-verification-report.md  n4-n6-execution-report.md  p-series-execution-report.md  pisot-residue-verification-report.md  pisot-residue-verification-run-output.txt  pisot_residue_whitepaper.v14.tex  relational_charge_paper.k.tex  relational_charge_paper.l.tex
matrix-plates/: CHANGELOG.md  LICENSE  MANIFEST.md  Makefile  README.md  SHA256SUMS  pyproject.toml
matrix-plates/docs/: DESIGN.md  HTML_EDITS.md  README.md  matrix_plates.html.patch  matrix_plates_build_spec.md  matrix_plates_guide.md
matrix-plates/examples/: README.md  mahler_spectrum.py  phi_plus_phi.py
matrix-plates/src/matrix_plates/: README.md  __init__.py  bridge.py  cache.py  canonical.py  cli.py  closure.py  export.py  histogram.py  invariants.py  linalg.py  operators.py  plates.py  polynomial.py  prng.py  render_html.py  roots.py  seeds.py  text.py
matrix-plates/tests/: README.md  _util.py  test_bridge.py  test_cache.py  test_canonical.py  test_closure.py  test_edge_cases.py  test_export.py  test_histogram.py  test_invariants.py  test_lehmer.py  test_linalg.py  test_minpoly.py  test_operators.py  test_polynomial.py  test_prng.py  test_property.py  test_provenance.py  test_verify_spec.py
matrix-plates/tests/fixtures/: ground_truth.js  ground_truth_js.json  invariant_factors_oracle.json  oracle_sympy.json
matrix-plates/web/: README.md  matrix_plates.html
(+168 files in other folders)
